<resources>
    <string name="app_name">ChoreMeApp</string>
    <string name="my_tasks">My Tasks</string>
    <string name="my_friends">My Friends</string>
    <string name="title_friends">Your Tasks Friends</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="loginText">Login</string>
    <string name="forgotPasswordText"><u>Forgot Password?</u></string>
    <string name="welcome_text">Welcome to ChoreMe App</string>
    <string name="Login">Login</string>
    <string name="CreateAct">Create a New Account</string>
    <string name="AddUsers">Add New Users</string>
    <string name="logout">Log Out</string>
    <string name="userImage">userImage</string>
    <string name="displayName">Display Name</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="friend_request">You Have a New Friend Request</string>
    <string name="Approve">Approve?</string>
    <string name="new_task_notification">You Have a New Task From</string>
    <string name="nickname">nickname</string>
    <string name="Status">Status</string>
    <string name="ChangePicture">Change Your Picture</string>
    <string name="ChangeStatus">ChangeStatus</string>
    <string name="UserSettings">Settings</string>
    <string name="tasknamehint">Enter Task Name</string>
    <string name="taskdetails">Enter Task Name</string>
    <string name="Enterdate">Task Expiration Date</string>
    <string name="selectdate">Pick a Date</string>
    <string name="Currentdate">Current Date:</string>
    <string name="PickUser">Pick Target User</string>
    <string name="FriendsNow">XXX Is Your Friend Now!</string>
    <string name="AddToTask">Add To Task!</string>
    <string name="PickFriend">Pick Target Friend</string>
    <string name="CurrentUser">Current User Picked</string>

</resources>
