<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#6200EE"
    android:layout_height="wrap_content"
    android:padding="@dimen/smallPadding">

    <androidx.cardview.widget.CardView
        android:elevation="@dimen/Elevation"
        app:cardCornerRadius="@dimen/Corner"
        android:layout_margin="@dimen/smallPadding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/IVFriend"
                android:layout_width="@dimen/SmallImage"
                android:layout_height="@dimen/SmallImage"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/smallPadding"
                android:contentDescription="@string/userImage"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tvFriendDisplayName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/IVFriend"
                android:text="@string/displayName"
                android:textSize="@dimen/SmallTextSize" />

            <Button
                android:id="@+id/btnAddToTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvFriendDisplayName"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/TinyTextSize"
                android:text="@string/AddToTask" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>